[package]
name = "cognicode-graph-wasm"
description = "WASM shim for cognicode-graph-algos — exposes pagerank, god_nodes, and community detection to the browser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.125"
wasm-bindgen-macro = "0.2.125"
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = "0.3"
cognicode-graph-algos = { path = "../cognicode-graph-algos", features = [] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = { workspace = true }

[profile.release]
opt-level = "s"
lto = true
