[package]
name = "cognicode-mcp"
description = "CogniCode MCP Server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "cognicode-mcp"
path = "src/main.rs"

[[bin]]
name = "mcp-client"
path = "src/mcp_client.rs"

[features]
# Default is empty — the workspace default (PG-only) is used when no
# features are specified.
default = []
# Forwarded to `cognicode-core` so MCP handlers can use PostgreSQL.
postgres = ["cognicode-core/postgres"]
# `multimodal` is an opt-in feature that enables the multimodal MCP
# tools (`docs_ingest`, `graph_search`). Off by default.
multimodal = ["cognicode-core/multimodal"]

[dependencies]
cognicode-core = { workspace = true }
cognicode-db = { path = "../cognicode-db" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmcp.workspace = true
process-wrap.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
clap.workspace = true
rayon.workspace = true
