[package]
name = "cognicode-mcp"
description = "CogniCode MCP Server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
# M3.5: expose `auth::check_bearer_token` as a library surface so the
# constant-time comparison can be unit-tested without compiling the
# `cognicode-mcp-server` binary (which has an unrelated pre-existing
# build break on the opentelemetry-prometheus 0.27 upgrade). Binaries
# below keep working unchanged; this is purely additive.
name = "cognicode_mcp"
path = "src/lib.rs"

[[bin]]
name = "cognicode-mcp"
path = "src/main.rs"

[[bin]]
name = "cognicode-mcp-server"
path = "src/server.rs"
required-features = ["postgres"]

[[bin]]
name = "mcp-client"
path = "src/mcp_client.rs"

[features]
# Default is empty — the workspace default (PG-only) is used when no
# features are specified.
default = []
# Forwarded to `cognicode-core` so MCP handlers can use PostgreSQL.
postgres = ["cognicode-core/postgres"]
# `multimodal` is an opt-in feature that enables the multimodal MCP
# tools (`docs_ingest`, `graph_search`). Off by default.
multimodal = ["cognicode-core/multimodal"]

[dependencies]
cognicode-core = { workspace = true }
cognicode-runtime = { path = "../cognicode-runtime" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmcp.workspace = true
process-wrap.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-prometheus.workspace = true
clap.workspace = true
rayon.workspace = true
axum = { workspace = true }
tower = { workspace = true }
http = "1"
http-body-util = "0.1"
tokio-util = "0.7"
# M3.5: constant-time comparison for Bearer-token auth middleware.
subtle.workspace = true
