[package]
name = "cognicode-quality"
description = "CogniCode Quality Analysis MCP Server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "cognicode-quality"
path = "src/main.rs"

[lib]
name = "cognicode_quality"
path = "src/lib.rs"

[features]
# Forward the `sqlite` feature to `cognicode-db` and `cognicode-core`.
# PR 1 (postgres-default-config): default includes `sqlite` to preserve
# the prior behavior. PR 2 will remove `sqlite` from the default and
# require consumers to opt in explicitly.
default = ["sqlite"]
sqlite = ["cognicode-db/sqlite", "cognicode-core/sqlite"]

[dependencies]
cognicode-axiom.workspace = true
cognicode-core.workspace = true
cognicode-db.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmcp.workspace = true
clap.workspace = true
rayon.workspace = true
tree-sitter.workspace = true
ignore.workspace = true
regex.workspace = true
dirs-next = "2"
serde_yaml = "0.9"
blake3.workspace = true
chrono.workspace = true
rusqlite.workspace = true
fs2 = "0.4"

[dev-dependencies]
tempfile.workspace = true
walkdir.workspace = true
