[package]
name = "cognicode-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "explorer-api"
path = "src/bin/api.rs"

[[bin]]
name = "explorer-mcp"
path = "src/bin/mcp.rs"

[dependencies]
cognicode-core = { path = "../cognicode-core" }
cognicode-explorer = { path = "../cognicode-explorer", default-features = false }
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rmcp.workspace = true

[features]
default = []
postgres = ["cognicode-explorer/postgres"]
