[package]
name = "cognicode-store-traits"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "(DEPRECATED) GraphStore trait and shared domain types — use cognicode-core::domain::traits instead. This crate is kept only to keep the workspace compiling while downstream consumers migrate; removal is scheduled after the PostgreSQL adapter lands."

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio-test.workspace = true
