[package]
name = "cognicode"
description = "Thin re-export crate for cognicode-core (for legacy integration test compatibility)"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
cognicode-core = { path = "../cognicode-core" }
anyhow.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
