[package]
name = "rcode-debug"
version = "0.1.0"
edition = "2021"
authors = ["CogniCode Team"]
description = "DAP-based debugging for agents - debug_analyze and debug_doctor"

[dependencies]
# Async
tokio = { version = "1.45", features = ["rt-multi-thread", "process", "io-util", "sync", "time", "macros", "fs"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# HTTP for downloading adapters
reqwest = { version = "0.12", features = ["json"] }

# Hash verification
sha2 = "0.10"
hex = "0.4"

# Archive extraction
zip = "2.0"

# Bytes handling
bytes = "1"

# Directory paths
dirs = "6.0"

# OS detection
os_info = "3"

# Command lookup
which = "7"

# Time
time = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.27"
futures = "0.3"
